--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,9 +41,8 @@ jobs:
       run: |
         ls
         pwd
-        ls /__w/the-last-traw/the-last-traw
         ls /__w/
-        cd /__w/the-last-traw/the-last-traw
+        cd /__w/the-last-traw
         docker images
         # ls $GITHUB_ACTION_PATH
         # cd $GITHUB_ACTION_PATH || exit 1
