--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,14 +29,20 @@ jobs:
         }
         EOF
 
-        # # Run Kaniko to build and push the frontend image
-        # /kaniko/executor --dockerfile="./frontend/Dockerfile" \
-        #   --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}"  \
-        #   --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:$(echo ${{ github.sha }} | head -c 7)" \
-        #   ${{ env.KANIKO_CACHE_ARGS }} \
-        #   --push-retry 5 \
-        #   --cleanup
+        # Run Kaniko to build and push the frontend image
+        /kaniko/executor --dockerfile="./frontend/Dockerfile" \
+          --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}"  \
+          --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:$(echo ${{ github.sha }} | head -c 7)" \
+          ${{ env.KANIKO_CACHE_ARGS }} \
+          --push-retry 5 \
+          --cleanup
 
+        /kaniko/executor --dockerfile="./back/Dockerfile" \
+          --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:$(echo ${{ github.sha }} | head -c 7)" \
+          ${{ env.KANIKO_CACHE_ARGS }} \
+          --push-retry 5 \
+          --cleanup
+          
     - name: Clean
       run: |
         ls
