testing to remove github action path

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -37,51 +37,39 @@ jobs:
           --push-retry 5 \
           --cleanup
 
-        /kaniko/executor --dockerfile="./back/Dockerfile" \
-          --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-frontend:$(echo ${{ github.sha }} | head -c 7)" \
+    - name: Clean
+      run: |
+        pwd
+        rm -rf $GITHUB_ACTION_PATH
+        ls $GITHUB_PATH
+
+
+  build-push-backend:
+    runs-on: arc-runner-set
+    container:
+      image: gcr.io/kaniko-project/executor:v1.22.0-debug 
+    permissions:
+      contents: read
+    steps:
+
+    # Build and push backend image with Kaniko
+    - name: Build and push backend image with Kaniko
+      run: |
+        # Create Docker config for authentication
+        cat <<EOF > /kaniko/.docker/config.json
+        {
+          "auths": {
+            "https://index.docker.io/v1/": {
+              "auth": "$(echo -n "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_TOKEN }}" | base64 )"
+            }
+          }
+        }
+        EOF
+
+        # Run Kaniko to build and push the backend image
+        /kaniko/executor --dockerfile="./backend/Dockerfile" \
+          --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}" \
+          --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:$(echo ${{ github.sha }} | head -c 7)" \
           ${{ env.KANIKO_CACHE_ARGS }} \
           --push-retry 5 \
           --cleanup
-          
-    - name: Clean
-      run: |
-        ls
-        pwd
-        ls $GITHUB_ACTION_PATH
-        ls $GITHUB_PATH
-        ls /__w/
-        # ls $GITHUB_ACTION_PATH
-        # cd $GITHUB_ACTION_PATH || exit 1
-        # cd ..
-        # ls
-
-
-  # build-push-backend:
-  #   runs-on: arc-runner-set
-  #   container:
-  #     image: gcr.io/kaniko-project/executor:v1.22.0-debug 
-  #   permissions:
-  #     contents: read
-  #   steps:
-
-  #   # Build and push backend image with Kaniko
-  #   - name: Build and push backend image with Kaniko
-  #     run: |
-  #       # Create Docker config for authentication
-  #       cat <<EOF > /kaniko/.docker/config.json
-  #       {
-  #         "auths": {
-  #           "https://index.docker.io/v1/": {
-  #             "auth": "$(echo -n "${{ secrets.DOCKERHUB_USERNAME }}:${{ secrets.DOCKERHUB_TOKEN }}" | base64 )"
-  #           }
-  #         }
-  #       }
-  #       EOF
-
-  #       # Run Kaniko to build and push the backend image
-  #       /kaniko/executor --dockerfile="./backend/Dockerfile" \
-  #         --context="${{ github.repositoryUrl }}#${{ github.ref }}#${{ github.sha }}" \
-  #         --destination="${{ secrets.DOCKERHUB_USERNAME }}/the-last-straw-backend:$(echo ${{ github.sha }} | head -c 7)" \
-  #         ${{ env.KANIKO_CACHE_ARGS }} \
-  #         --push-retry 5 \
-  #         --cleanup
