--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -101,16 +101,15 @@ jobs:
         sudo apt-get install -y kubectl
         kubectl version --client
 
-    - name: Apply RBAC config
-      run: |
-        kubectl apply -f rbac-config.yaml
-
+    # - name: Apply RBAC config
+    #   run: |
+    #     kubectl apply -f rbac-config.yaml
 
     - name: Config kubectl
       run: |
-        mkdir -p ~/.kube
-        echo "${{ secrets.K8S_CONFIG }}" > ~/.kube/config
-        export KUBECONFIG=/etc/kubernetes/admin.conf
+        
+        echo "${{ secrets.K8S_CONFIG }}" > ~/admin.conf
+        export KUBECONFIG=~/admin.conf
         export PATH="kubectl:$PATH"
         echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc
         kubectl get node -owide
