check "the-last-straw-app" namespace

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -107,13 +107,13 @@ jobs:
 
     - name: Config kubectl
       run: |
-        
         echo "${{ secrets.K8S_CONFIG }}" > ~/admin.conf
         export KUBECONFIG=~/admin.conf
         export PATH="kubectl:$PATH"
         echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc
         kubectl get node -owide
-        kubectl get namspace
+        kubectl get namspaces
+        kubectl describe namespace the-last-straw-app
         kubectl get all -n the-last-straw-app
 
     - name: Checkout
