--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -112,7 +112,7 @@ jobs:
         export PATH="kubectl:$PATH"
         echo 'export PATH=$HOME/bin:$PATH' >> ~/.bashrc
         kubectl get node -owide
-        kubectl get namspaces
+        kubectl get namespaces
         kubectl describe namespace the-last-straw-app
         kubectl get all -n the-last-straw-app
 
