--- a/kustomize/backend-deployment.yaml
+++ b/kustomize/backend-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: peapota/the-last-straw-backend:TAG
+        image: peapota/the-last-straw-backend:5c41327
         ports:
         - containerPort: 4000
         envFrom:
